added in the initial vagrant environment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+#vagrant temp files
+*~
+*.swp 
+*.swo
+
+
+
+#vagrant
+.vagrant/
+
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
